fixed some overflow with certain components

--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,20 @@
 #A3AB78 */
 
 body { 
-  /* height: 100vh; */
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   font-size: 16px;
 }
 
+.App {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  /* grid-template-rows: 1fr 1fr 3fr; */
+  margin: 0 auto;
+  height: 95vh;
+  gap: 0.2em;
+  font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
+  font-weight: bold;
+}
 
 .highlight {
   border-radius: 5px;
@@ -32,6 +41,11 @@ body {
   color: white;
   transition: 0.1s ease-in-out;
 }
+
+.Result li, .Result ul {
+  overflow: auto;
+}
+
 .Result li:hover{
   background-color: #BDE038;
   color: #4b4b4b;
@@ -43,22 +57,13 @@ li {
   background-color: #506266;
   /* height: 100%; */
   margin: 0.5em;
-  overflow-wrap: break-all;
+  overflow-wrap: break-word;
 }
 
-.App {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  /* grid-template-rows: 1fr 1fr 3fr; */
-  margin: 0 auto;
-  /* height: 100vh; */
-  gap: 0.2em;
-  font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
-  font-weight:bold;
-}
 
-.Header .Information .Result .InputExpressionBar {
+.Header, .Information, .Result, .InputExpressionBar {
   min-height: 0px;
+  border-radius: 4px;
 }
 
 .Header {
@@ -75,11 +80,12 @@ li {
 .Information {
   grid-column: 1;
   grid-row: 2;
-  border-right: 2px solid #d8d8d8;
+  /* border-right: 2px solid #d8d8d8; */
   /* border-bottom: 2px solid #BDE038; */
   padding: 0.5em;
   background-color: #10454F;
   color: white;
+  overflow-y: auto;
 }
 
 .InputExpressionBar {
@@ -94,6 +100,11 @@ input {
   height: 95%;
   padding: 5px;
   width: calc(100% - 15px);
+  background-color: #506266;
+  color: white;
+  border-top: 0px;
+  border-bottom: 0px;
+  border-right: 0px;
 }
 
 
@@ -102,9 +113,8 @@ input {
   grid-row: 2;
   padding: 1em;
   background-color: #10454F;
-  /* border-bottom: 2px solid #BDE038; */
   color: white;
-  /* overflow: auto; */
+  overflow-y: scroll;
 }
 
 
